fixes alignment and color of notifications

--- a/app/containers/Notifications/Notification.scss
+++ b/app/containers/Notifications/Notification.scss
@@ -16,7 +16,7 @@
 }
 
 .icon svg {
-  margin-top: -7px;
+  margin-top: -4px;
   width: 22px;
   height: 22px;
 }
